Detail-View (Bewerbung) weiter ausgebaut (Header)

--- a/bewerbungverwaltung-cloud-web/src/main/webapp/manifest.json
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/manifest.json
@@ -77,7 +77,7 @@
 				"name": "BewerbungenMaster",
 				"target": "BewerbungenMaster",
 				"subroutes": [{
-					"pattern": "{Detail}",
+					"pattern": "Bewerbungs/{Bewerbung}",
 					"name": "BewerbungDetail",
 					"target": "BewerbungDetail"
 				}]
