--- a/bewerbungverwaltung-cloud-web/src/main/webapp/manifest.json
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/manifest.json
@@ -89,6 +89,9 @@
 					"target": "BewerbungDetail"
 				}]
 			}, {
+				"name": "DetailObjectNotFound",
+				"target": "detailObjectNotFound"
+			}, {
 				"pattern": "{all*}",
 				"name": "NotFound",
 				"target": "notFound"
