--- a/bewerbungverwaltung-cloud-web/src/main/webapp/manifest.json
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/manifest.json
@@ -17,7 +17,13 @@
 			"version": "1.32.0"
 		},
 		"dataSources": {
-
+			"bewerbungverwaltungDataModel": {
+				"uri": "/destinations/somewhere/",
+				"type": "OData",
+				"settings": {
+					"odataVersion": "2.0"
+				}
+			}
 		}
 	},
 	"sap.ui": {
