--- a/.project.json
+++ b/.project.json
@@ -1,7 +1,7 @@
 {
   "mockpreview": {
     "loadJSONFiles": true,
-    "mockUri": "/destinations/somewhere/",
+    "mockUri": "https://trial.apim1.hanatrial.ondemand.com:443/p1942281469trial/v1/fis/bewerbungservice/",
     "metadataFilePath": "../localService/metadata.xml",
     "loadCustomRequests": false,
     "mockRequestsFilePath": ""
