--- a/bewerbungverwaltung-cloud-web/src/main/webapp/manifest.json
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/manifest.json
@@ -17,8 +17,8 @@
 			"version": "1.32.0"
 		},
 		"dataSources": {
-			"bewerbungverwaltungDataModel": {
-				"uri": "/destinations/somewhere/",
+			"bewerbungservice": {
+				"uri": "https://trial.apim1.hanatrial.ondemand.com:443/p1942281469trial/v1/fis/bewerbungservice/",
 				"type": "OData",
 				"settings": {
 					"odataVersion": "2.0"
@@ -67,6 +67,12 @@
 				"type": "sap.ui.model.resource.ResourceModel",
 				"settings": {
 					"bundleName": "de.fis.bewerbungverwaltung.i18n.i18n"
+				}
+			},
+			"testModel": {
+				"dataSource": "bewerbungservice",
+				"settings": {
+					"defaultBindingMode": "TwoWay"
 				}
 			}
 		},
