--- a/bewerbungverwaltung-cloud-web/src/main/webapp/manifest.json
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/manifest.json
@@ -1,7 +1,6 @@
 {
-	"_version": "1.1.0",
+	"_version": "1.4.0",
 	"sap.app": {
-		"_version": "1.1.0",
 		"id": "de.fis.bewerbungverwaltung",
 		"type": "application",
 		"i18n": "i18n/i18n.properties",
@@ -19,6 +18,13 @@
 		"dataSources": {
 			"bewerbungservice": {
 				"uri": "https://trial.apim1.hanatrial.ondemand.com:443/p1942281469trial/v1/fis/bewerbungtest/",
+				"type": "OData",
+				"settings": {
+					"odataVersion": "2.0"
+				}
+			},
+			"newService": {
+				"uri": "/applman/odata.srv/",
 				"type": "OData",
 				"settings": {
 					"odataVersion": "2.0"
@@ -72,8 +78,21 @@
 			"testModel": {
 				"dataSource": "bewerbungservice",
 				"settings": {
-					"defaultBindingMode": "TwoWay"
+					"defaultOperationMode": "Server",
+					"defaultBindingMode": "TwoWay",
+					"defaultCountMode": "Inline",
+					"useBatch": false
 				}
+			},
+			"newModel": {
+				"dataSource": "newService",
+				"settings": {
+					"defaultOperationMode": "Server",
+					"defaultBindingMode": "TwoWay",
+					"defaultCountMode": "Inline",
+					"useBatch": false
+				},
+				"preload": true
 			}
 		},
 		"routing": {
