Test and bugfix

--- a/bewerbungverwaltung-cloud-web/src/main/webapp/manifest.json
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/manifest.json
@@ -24,7 +24,7 @@
 				}
 			},
 			"ApplmanService": {
-				"uri": "/applman/odata.srv/",
+				"uri": "http://localhost:8541/applman/odata.srv/",
 				"type": "OData",
 				"settings": {
 					"odataVersion": "2.0"
