--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -16,15 +16,8 @@
 			"version": "1.32.0"
 		},
 		"dataSources": {
-			"bewerbungservice": {
-				"uri": "https://trial.apim1.hanatrial.ondemand.com:443/p1942281469trial/v1/fis/bewerbungtest/",
-				"type": "OData",
-				"settings": {
-					"odataVersion": "2.0"
-				}
-			},
 			"ApplmanService": {
-				"uri": "http://localhost:8541/applman/odata.srv/",
+				"uri": "/applman/odata.srv",
 				"type": "OData",
 				"settings": {
 					"odataVersion": "2.0"
@@ -73,15 +66,6 @@
 				"type": "sap.ui.model.resource.ResourceModel",
 				"settings": {
 					"bundleName": "de.fis.bewerbungverwaltung.i18n.i18n"
-				}
-			},
-			"testModel": {
-				"dataSource": "bewerbungservice",
-				"settings": {
-					"defaultOperationMode": "Server",
-					"defaultBindingMode": "TwoWay",
-					"defaultCountMode": "Inline",
-					"useBatch": false
 				}
 			},
 			"applmanModel": {
