[Fixed] Bug when editing Comments [Change] Using batch mode

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -75,10 +75,10 @@
 			"applmanModel": {
 				"dataSource": "ApplmanService",
 				"settings": {
-					"defaultOperationMode": "Server",
+					"defaultOperationMode": "Client",
 					"defaultBindingMode": "TwoWay",
 					"defaultCountMode": "Inline",
-					"useBatch": false
+					"useBatch": true
 				},
 				"preload": true
 			}
