[Feature] Implemented changing of Status and deletion of Application

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -78,7 +78,7 @@
 					"defaultOperationMode": "Client",
 					"defaultBindingMode": "TwoWay",
 					"defaultCountMode": "Inline",
-					"useBatch": true
+					"useBatch": false
 				},
 				"preload": true
 			}
